Fixed styling in FrinedLanding so that columns are aligned

--- a/techquiz/src/index.css
+++ b/techquiz/src/index.css
@@ -103,6 +103,11 @@ ol{
   font-weight: bold;
 }
 
+.flex-col{
+
+
+}
+
 .flex{
   display: flex;
   flex-wrap: wrap;
